--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ The goal of MSI.EAGLE is to create an interactive user app for processing of mas
 You can install the development version of MSI.EAGLE as follows:
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+<!-- # FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE? -->
 Install using: 
 
 Step 1*: Install Bioconductor packages
@@ -36,6 +36,9 @@ if (!require("BiocManager", quietly = TRUE))
     install.packages("BiocManager")
 
 BiocManager::install(c("BiocParallel", "Cardinal"))
+
+One can also install the CardinalWorkflows package for demo data
+BiocManager::install("CardinalWorkflows")
 ```
 
 ```
@@ -46,7 +49,7 @@ https://git-scm.com/book/en/v2/Getting-Started-Installing-Git
 
 Step 3: Install MSI.EAGLE
 
-remotes::install_git("http://weljie.myds.me:30003/aalim/DESI_Shiny_Processing_script.git", branch="modules")
+remotes::install_git("https://github.com/Weljie-Lab-UPenn/MSI.EAGLE")
 ```
 
 ```
@@ -57,31 +60,36 @@ remotes::install_git("http://weljie.myds.me:30003/aalim/DESI_Shiny_Processing_sc
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example which shows you how to setup and start the app:
 
 ```{r example}
-## basic example code
-# wd = ('path/to/workingdirectory)
-# rawd = ('path/to/rawfilesdirectory') # rawd = wd
+# basic startup script
+
+# set up the directory with raw data
+ rawd = ('path/to/rawfilesdirectory')
+
+# set up the working directory
+wd = ('path/to/workingdirectory') # wd = rawd
+
 # ncores = as.integer(parallel::detectCores()/2) # use 1/2 of the available processors
-# ncores = as.integer(parallel::detectCores())-2 # us all but 2 available processors
-# library(MSI.EAGLE)
-# MSI.EAGLE()
+ ncores = as.integer(parallel::detectCores())-2 # us all but 2 available processors
+ library(MSI.EAGLE)
+ MSI.EAGLE()
 
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+<!-- What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so: -->
 
-```{r cars}
-summary(cars)
-```
+<!-- ```{r cars} -->
+<!-- summary(cars) -->
+<!-- ``` -->
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
+<!-- You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>. -->
 
-You can also embed plots, for example:
+<!-- You can also embed plots, for example: -->
 
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
+<!-- ```{r pressure, echo = FALSE} -->
+<!-- plot(pressure) -->
+<!-- ``` -->
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+<!-- In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN. -->
