Clean up README.Rmd

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,122 +2,100 @@
 output: github_document
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
-
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
-)
-```
-
 # MSI.EAGLE
 
-<!-- badges: start -->
-<!-- badges: end -->
-
-The goal of MSI.EAGLE is to create an interactive user app for processing of mass spec imaging data. It uses many of the processing features from Cardinal, and adds a number of analysis options.
+An interactive Shiny application for processing mass spectrometry imaging (MSI) data. MSI.EAGLE leverages processing features from Cardinal and adds additional analysis options for comprehensive MSI data analysis.
 
 ## Installation
 
-You can install the development version of MSI.EAGLE as follows:
+### Prerequisites
 
-``` r
-<!-- # FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE? -->
-Install using: 
+Before installing MSI.EAGLE, you need to install the required Bioconductor packages and Git.
 
-Step 1*: Install Bioconductor packages
+### Step 1: Install Required R Packages
 
+```r
+# Install remotes package
 install.packages("remotes")
 
+# Install BiocManager if not already installed
 if (!require("BiocManager", quietly = TRUE))
     install.packages("BiocManager")
 
+# Install required Bioconductor packages
 BiocManager::install(c("BiocParallel", "Cardinal"))
 
-One can also install the CardinalWorkflows package for demo data
+# Optional: Install CardinalWorkflows for demo data
 BiocManager::install("CardinalWorkflows")
 ```
 
-```
-Step 2: Install Git
-```
-https://git-scm.com/book/en/v2/Getting-Started-Installing-Git
-```
+### Step 2: Install Git
 
-Step 3: Install MSI.EAGLE
+If you don't have Git installed, download and install it from: https://git-scm.com/book/en/v2/Getting-Started-Installing-Git
 
+### Step 3: Install MSI.EAGLE
+
+```r
 remotes::install_git("https://github.com/Weljie-Lab-UPenn/MSI.EAGLE")
 ```
 
+## Usage
+
+### Basic Setup
+
+```r
+library(MSI.EAGLE)
+
+# Set path to raw data files
+rawd <- 'path/to/rawfilesdirectory'
+
+# Set working directory (can be same as raw data directory)
+wd <- 'path/to/workingdirectory'
+
+# Configure number of CPU cores to use
+# Option 1: Use half of available processors
+ncores <- as.integer(parallel::detectCores()/2)
+
+# Option 2: Use all but 2 processors (recommended)
+ncores <- as.integer(parallel::detectCores()) - 2
+
+# Launch the application
+MSI.EAGLE()
 ```
 
-```
+## Private Repository Access
 
-```
+If you need to access this as a private repository, you'll need to set up a GitHub Personal Access Token (PAT).
 
-## Example
+### Setting up GitHub PAT
 
-This is a basic example which shows you how to setup and start the app:
+1. **Create a PAT** on GitHub with appropriate repository permissions
 
-```{r example}
-# basic startup script
+2. **Store the PAT securely** in your `.Renviron` file:
+   ```r
+   # Edit your .Renviron file
+   usethis::edit_r_environ()
+   ```
 
-# set up the directory with raw data
- rawd = ('path/to/rawfilesdirectory')
+3. **Add your PAT** to the file:
+   ```
+   GITHUB_PAT=your_personal_access_token
+   ```
 
-# set up the working directory
-wd = ('path/to/workingdirectory') # wd = rawd
+4. **Restart R** to load the environment variable
 
-# ncores = as.integer(parallel::detectCores()/2) # use 1/2 of the available processors
- ncores = as.integer(parallel::detectCores())-2 # us all but 2 available processors
- library(MSI.EAGLE)
- #MSI.EAGLE() # uncomment to start the app
+5. **Install the package** using the standard command:
+   ```r
+   remotes::install_github("Weljie-Lab-UPenn/MSI.EAGLE")
+   ```
 
-```
+## Requirements
 
+- R version 3.6 or higher
+- Bioconductor packages: Cardinal, BiocParallel
+- Git (for installation)
+- Sufficient RAM for mass spectrometry imaging data processing
 
-## Access as a private repository (TEMP)
+## Support
 
-3. Store the PAT in .Renviron (Recommended)
-
-A more secure way is to store the PAT in your .Renviron file, which is loaded into your environment when you start R. This way, you don't have to expose the PAT in your scripts.
-
-    Edit .Renviron:
-        You can edit or create a .Renviron file in your home directory or the project directory:
-
-        r
-
-usethis::edit_r_environ()
-
-Add the following line to the file:
-
-makefile
-
-        GITHUB_PAT=your_personal_access_token
-
-    Restart R to load the new environment variable.
-
-    Install the Package:
-        Now you can simply use remotes::install_github("username/repo_name") without needing to pass the PAT each time.
-
-This approach keeps your PAT secure while still allowing you to install packages from private repositories.
-
-
-<!-- What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so: -->
-
-<!-- ```{r cars} -->
-<!-- summary(cars) -->
-<!-- ``` -->
-
-<!-- You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>. -->
-
-<!-- You can also embed plots, for example: -->
-
-<!-- ```{r pressure, echo = FALSE} -->
-<!-- plot(pressure) -->
-<!-- ``` -->
-
-<!-- In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN. -->
+For issues and questions, please use the GitHub Issues page for this repository.
