Add documentation section to README
Added a documentation section with instructions.

--- a/README.Rmd
+++ b/README.Rmd
@@ -71,6 +71,8 @@ ncores <- as.integer(parallel::detectCores()) - 2
 # Launch the application
 MSI.EAGLE()
 ```
+## Documentation
+For detailed instructions, tutorials, and examples, see our Manuals and Vignettes.
 
 ## Requirements
 
